--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_conversion_hosts_in_CloudForms.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_conversion_hosts_in_CloudForms.adoc
@@ -3,6 +3,8 @@
 [id="Configuring_conversion_hosts_in_CloudForms"]
 = Configuring the conversion hosts in CloudForms
 
+BASED ON MOCKUPS. MAY CHANGE.
+
 [id='VDDK_only_Downloading_and_copying_VDDK']
 .Prerequisite
 
