--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_a_migration_plan.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_a_migration_plan.adoc
@@ -47,6 +47,12 @@ If you selected *Import a CSV file with a list of VMs to be migrated*:
 
 .. Click *Import*.
 .. Browse to the CSV file and click *Open*.
++
+.CSV file errors
+[NOTE]
+====
+Virtual machines with a duplicate `Name` field and no optional field to distinguish them, or with duplicate optional fields, are marked with a red `x` and cannot be added to the migration plan.
+====
 
 . Click *Next*.
 
