--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Migration_plan_prerequisites.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Migration_plan_prerequisites.adoc
@@ -6,10 +6,12 @@
 The following prerequisites apply to certain migrations:
 
 * xref:Creating_a_csv_file_to_add_virtual_machines_to_the_migration_plan[CSV file], to add previously migrated virtual machines to the migration plan. The migration plan cannot discover these virtual machines automatically because their status is `migrated` in the CloudForms database.
++
+Optionally, you can use a CSV file for large migrations.
 
-* xref:Adding_ansible_playbooks_to_cloudforms[Ansible configuration in CloudForms], if you are using pre- or postmigration playbooks
+* xref:Adding_ansible_playbooks_to_cloudforms[Ansible configuration in CloudForms], if you are using playbooks to automate premigration or postmigration tasks
 
-* xref:Rhel_premigration_playbook[`RHEL premigration` playbook], if you are migrating virtual machines running RHEL or other Linux-based operating system, to ensure that their IP addresses are accessible after migration
+* xref:Rhel_premigration_playbook[`RHEL premigration` playbook for virtual machines running RHEL or other Linux-based operating system], to ensure that their IP addresses are accessible after migration
 
 include::proc_Creating_a_csv_file_to_add_virtual_machines_to_the_migration_plan.adoc[leveloffset=+1]
 include::proc_Adding_ansible_playbooks_to_cloudforms.adoc[leveloffset=+1]
