--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Infrastructure_migration_solution_overview.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Infrastructure_migration_solution_overview.adoc
@@ -32,11 +32,16 @@ The infrastructure migration has the following key steps:
 * Mapping the source resources to the target infrastructure
 * Creating and running a migration plan.
 
-For troubleshooting information, see the following:
+.Troubleshooting information
+[NOTE]
+====
+To troubleshoot a migration:
 
 * xref:Vmware_to_rhv_migration_workflow[]
 * xref:Vmware_to_osp_migration_workflow[]
 * xref:Troubleshooting[]
+====
+
 
 include::modules/con_Vmware_to_rhv_migration_workflow.adoc[leveloffset=+1]
 include::modules/con_Vmware_to_osp_migration_workflow.adoc[leveloffset=+1]
