--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/assembly_Creating_and_configuring_the_conversion_hosts.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/assembly_Creating_and_configuring_the_conversion_hosts.adoc
@@ -3,7 +3,7 @@
 [id="Creating_and_configuring_the_conversion_hosts"]
 = Creating and configuring the conversion hosts
 
-A _conversion host_ is a Red Hat Virtualization host or an OpenStack Platform instance, created from a conversion host appliance, with `virt-v2v` and `virt-v2v-wrapper` installed.
+A _conversion host_ is a Red Hat Virtualization host or an OpenStack Platform instance, created from a conversion host appliance, with `virt-v2v` and `virt-v2v-wrapper` installed. `virt-v2v` and `virt-v2v-wrapper` perform the migration tasks. See xref:Vmware_to_rhv_migration_workflow[] and xref:Vmware_to_osp_migration_workflow[] for details.
 
 Creating and configuring the conversion hosts involves the following key steps:
 
