--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Vmware_to_osp_migration_workflow.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Vmware_to_osp_migration_workflow.adoc
@@ -3,7 +3,7 @@
 [id="Vmware_to_osp_migration_workflow"]
 = Red Hat OpenStack Platform migration workflow
 
-This diagram describes the migration process after you have created the infrastructure mapping and the migration plan in CloudForms.
+This diagram describes the workflow of a migration to OpenStack Platform.
 
 .VMware to OpenStack Platform migration workflow
 
