--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Vmware_to_rhv_migration_workflow.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Vmware_to_rhv_migration_workflow.adoc
@@ -3,7 +3,7 @@
 [id="Vmware_to_rhv_migration_workflow"]
 = Red Hat Virtualization migration workflow
 
-This diagram describes the migration process after you have created the infrastructure mapping and the migration plan in CloudForms.
+This diagram describes the workflow of a migration to Red Hat Virtualization.
 
 .VMware to Red Hat Virtualization migration workflow
 
