--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Questions_to_ask_before_migration.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Questions_to_ask_before_migration.adoc
@@ -31,7 +31,7 @@ What impact will the migration have on my users?::
 * Check whether users will lose access to critical applications.
 
 How long does the migration take?::
-* There are no specific rules to determine how long the actual migration will take. This is determined on a case-by-case basis. The following Red Hat Virtualization example is provided as a guide.
+* There are no specific rules to determine how long the actual migration will take. This is determined on a case-by-case basis. The following example is provided as a guide.
 +
 [id="Migration_example"]
 .Red Hat Virtualization migration example
