--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Conversion_host_prerequisites.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Conversion_host_prerequisites.adoc
@@ -3,9 +3,14 @@
 [id="Conversion_host_prerequisites"]
 = Conversion host prerequisites
 
+THESE SECTIONS MAY BE MOVED
+
 The following prerequisites apply to all target environments:
 
 * xref:Deciding_how_many_conversion_hosts_to_create[Deciding how many conversion hosts to create]
++
+Optionally, you can xref:Changing_the_maximum_number_of_concurrent_migrations[change the maximum number of concurrent migrations] for the conversion host.
+
 * xref:Choosing_vddk_or_ssh_transformation[Choosing VDDK or SSH transformation for the migration]
 
 [id="Deciding_how_many_conversion_hosts_to_create"]
