--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_rhv_target_environment.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_rhv_target_environment.adoc
@@ -22,14 +22,14 @@ include::ref_Software_compatibility_requirements.adoc[]
 +
 [NOTE]
 ====
-IMS only supports shared storage such as NFS, iSCSI, or FCP. Local storage is not supported.
+IMS only supports shared storage, such as NFS, iSCSI, or FCP. Local storage is not supported.
 ====
 
-. Upload the link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.3/html-single/administration_guide/#Uploading_the_VirtIO_and_Guest_Tool_Image_Files_to_an_ISO_Storage_Domain[VirtIO and Guest Tool images] to the ISO storage domain. The VirtIO image file name must include the version number: `virtio-win-_version_.iso`. The Guest Tool image is used to migrate Windows virtual machines.
+. Upload the link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.3/html-single/administration_guide/#Uploading_the_VirtIO_and_Guest_Tool_Image_Files_to_an_ISO_Storage_Domain[VirtIO and Guest Tool] image files to the ISO storage domain. The VirtIO file name must include the version number: `virtio-win-_version_.iso`. The Guest Tool is required in order to migrate Windows virtual machines.
 
 . Install Red Hat CloudForms link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/installing_red_hat_cloudforms_on_red_hat_virtualization/[4.6] (with RHV 4.2.7) or link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html/installing_red_hat_cloudforms_on_red_hat_virtualization/[4.7] (with RHV 4.2.8) on the Manager machine.
 
-. Add the link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/managing_providers/#vmware_vcenter_providers[VMware] and link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/managing_providers/#red_hat_virtualization_providers[Red Hat Virtualization] environments as providers in CloudForms.
+. Add link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/managing_providers/#vmware_vcenter_providers[VMware] and link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/managing_providers/#red_hat_virtualization_providers[Red Hat Virtualization] as providers in CloudForms.
 +
 [NOTE]
 ====
