--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_vmware_source_environment.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_vmware_source_environment.adoc
@@ -1,31 +1,33 @@
 // Module included in the following assemblies:
 // assembly_Preparing_the_environment_for_migration.adoc
 [id="Preparing_the_vmware_source_environment"]
-= Preparing the VMware source environment
+= Preparing the source environment
 
-Prepare the VMware network and virtual machines for migration.
+Prepare the source network and virtual machines for migration.
 
 .Network
 
-Extend the source network to the target environment.
+* Extend the source network to the target environment.
 
 [IMPORTANT]
 ====
-The network configuration must not be changed in any way during the migration. IP addresses, VLANs, and other network configurations must be the same, before and after migration, because the conversion process preserves the source virtual machine MAC addresses.
+The network configuration must not be changed in any way during the migration.
+
+Ensure that IP addresses, VLANs, and other network configurations are not changed before or after migration, because the conversion process preserves the source virtual machine MAC addresses.
 ====
 
 .Virtual machines
 
-. Unmount ISO/CDROM disks from the virtual machines.
+. Unmount mounted ISO/CDROM disks.
 
-. Check that the virtual machines do not have encrypted disks.
+. Check that attached disks are not encrypted.
 
-. Check that each NIC on each virtual machine has no more than one IPv4 and/or one IPv6 address.
+. Check that each NIC has no more than one IPv4 and/or one IPv6 address.
 
-. Install link:https://www.vmware.com/support/ws5/doc/new_guest_tools_ws.html[VMware Tools] on all virtual machines to capture the IP addresses.
+. Install link:https://www.vmware.com/support/ws5/doc/new_guest_tools_ws.html[VMware Tools] to capture IP addresses.
 
-. Check that source virtual machine names contain only upper- or lower-case letters, numbers, underscores (`_`), hyphens (`-`), or periods (`.`). Special characters and spaces are not permitted.
+. Check that source virtual machine names contain only upper- or lower-case letters, numbers, underscores (`_`), hyphens (`-`), or periods (`.`). *Special characters and spaces are not permitted.*
 
-. Red Hat Virtualization only: Check that the names of source virtual machines do not duplicate the names of existing RHV virtual machines.
+. Red Hat Virtualization only: Check that source virtual machine names do not duplicate the names of existing RHV virtual machines.
 
 You are ready to prepare the target environment.
