--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Questions_to_ask_before_migration.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Questions_to_ask_before_migration.adoc
@@ -30,7 +30,7 @@ What impact will the migration have on my users?::
 * It may be possible to migrate your applications in phases, without downtime at the application layer, if the applications are distributed in a high-availability architecture.
 * Check whether users will lose access to critical applications.
 
-How long does the migration take?::
+How long will the migration take?::
 * There are no specific rules to determine how long the actual migration will take. This is determined on a case-by-case basis. The following example is provided as a guide.
 +
 [id="Migration_example"]
@@ -40,7 +40,6 @@ How long does the migration take?::
 * Duration of migration: 1:15:53 (HH:MM:SS)
 * 10 virtual machines (100 GB RAM, 1000 GB storage)
 * Total data migrated, using VDDK: 1000 GB
-* Utilization: 66%
 * Hardware:
 ** Strong host (40 cores, 500 GB RAM)
 ** Fast SSD XtremIO storage
