--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_osp_target_environment.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_osp_target_environment.adoc
@@ -10,37 +10,37 @@ include::ref_Software_compatibility_requirements.adoc[]
 
 . Install link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/html-single/director_installation_and_usage/[Red Hat OpenStack Platform] 13 or later.
 
-. Create link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/html-single/networking_guide/#create_a_network[provider networks] for the OpenStack Platform instances to ensure that the source IP addresses are preserved.
+. Create link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/html-single/networking_guide/#create_a_network[provider networks] for the target instances to preserve the IP addresses of the source virtual machines.
 
-. Create a link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/html-single/users_and_identity_management_guide/#create_a_project[project] for the conversion hosts and whatever destination projects you require for the OpenStack Platform instances.
+. Create a link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/html-single/users_and_identity_management_guide/#create_a_project[project] for the conversion hosts and whatever destination projects you require for the target instances.
 
 . Ensure that the `admin` user has link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/html-single/users_and_identity_management_guide/#edit_a_project[`member` and `admin` roles] in the conversion and destination projects.
 
-. Set at least one link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/html-single/storage_guide/#section-volumes-advanced-vol-type[`volume type`] for the OpenStack Platform block storage. Otherwise, CloudForms cannot detect the storage when you create the infrastructure mapping.
+. Set at least one link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/html-single/storage_guide/#section-volumes-advanced-vol-type[`volume type`] for the target block storage. Otherwise, CloudForms cannot detect the storage when you create the infrastructure mapping.
 
-. Ensure that the OpenStack Platform storage backends have sufficient space for the migrated virtual machines.
+. Ensure that the target storage backends have sufficient space for the migrated virtual machines.
 
-. Configure security groups:
+. Configure security groups with the following ports enabled:
 
-* A security group for the conversion hosts and CloudForms must have port 22 (SSH) enabled.
-* A security group for CloudForms must have port 443 (HTTPS) enabled.
+* For the conversion hosts and CloudForms: port 22 (SSH)
+* For CloudForms: port 443 (HTTPS)
 +
 [NOTE]
 ====
 Outbound traffic is enabled by default. If you have changed this setting, enable ports 902 (CloudForms to VMware) and 5480 (`virt-v2v` to vCenter).
 ====
 
-. Create flavors suitable for the virtual machines that you are migrating. If you do not create custom flavors, CloudForms tries to map each source virtual machine to an existing flavor.
+. Create flavors for the source virtual machines. If you do not create custom flavors, CloudForms will map each source virtual machine to an existing flavor.
 
 . Install link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/installing_red_hat_cloudforms_on_red_hat_openstack_platform/[Red Hat CloudForms] 4.7 or later.
 
-. Add the link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/managing_providers/#vmware_vcenter_providers[VMware] and link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/managing_providers/#adding_an_openstack_infrastructure_provider[OpenStack Platform] environments as providers in CloudForms.
+. Add link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/managing_providers/#vmware_vcenter_providers[VMware] and link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/managing_providers/#adding_an_openstack_infrastructure_provider[OpenStack Platform] as providers in CloudForms.
 +
 [NOTE]
 ====
 Do not remove or change a provider before, during, or after migration because it has negative effects on the CloudForms migration objects.
 ====
 
-. Ensure that the user configured in CloudForms for the OpenStack Platform provider has `admin` privileges for the target projects.
+. Ensure that the OpenStack Platform user (default is `cloud-user`) in CloudForms has `admin` privileges for the target projects.
 
 You are ready to xref:Creating_and_configuring_the_conversion_hosts[create and configure the conversion hosts].
